<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:text="@string/role_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/u_id"
        android:textSize="22dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="274dp"
        android:layout_height="205dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <Button android:id="@+id/btnStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:onClick="startService"
        android:layout_marginTop="20dp" />

    <Button android:id="@+id/btnStopService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:onClick="stopService"
        android:layout_marginTop="10dp" />

</LinearLayout>
