<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mis573.sigma.cctracker.TimesheetActivity" >

    <TextView android:text="@string/role_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/u_id"
        android:textSize="22dp"
        android:layout_marginTop="10dp" />

    <TextView android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_below="@+id/u_id"
        android:textSize="22dp"
        android:layout_marginTop="10dp" />

    <ScrollView android:id="@+id/entries_sv" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_marginTop="10dp" >

        <LinearLayout android:id="@+id/entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top" >

        </LinearLayout>
    </ScrollView>

    <Button android:id="@+id/back_button"
        style="?android:textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entries_sv"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textStyle="bold"
        />

</RelativeLayout>
